<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_register_to_get_started">Hello! Register to get \nStarted</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or Register with</string>
    <string name="already_have_an_account_login_now">Already have an account? <font color="#A45EE5"><B>Login Now</B></font></string>
    <string name="fields_are_not_valid">Fields are not valid!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="back">Back</string>
</resources>